# Openrastr-evolve

./: README.md  register_skill.py
deep_pipeline/: README.md  __init__.py  adapters.py  models.py  skills.py
deep_pipeline/generated_capabilities/: clinical_data_processing.py  parse_structured_ontology_formats_rdf_owl_json_ld.py
goal_interpreter_ollama_modules/: __init__.py  canonicalizer.py  clarification_engine.py
openrastr-evolve/: LICENSE  README.md  pyproject.toml  run_goal_pipeline.py
openrastr-evolve/capability_registry/: generated_capabilities.json  skill.md  skill_capability_map.json
openrastr-evolve/deep_pipeline/: coding_agent.py  deep_agents.py  memory.py  orchestrator.py  registry.py
openrastr-evolve/deep_pipeline/generated_capabilities/: __init__.py
openrastr-evolve/goal_interpreter_ollama_modules/: goal_interpreter.py  goal_parser.py  llm_router.py
openrastr-evolve/openrastr_evolve/: cli.py  config.py  doctor.py  onboarding.py
openrastr-evolve/scripts/: bootstrap.sh
openrastr-evolve/skills_registry/: __init__.py  skills.json
openrastr_evolve/: banner.py
